--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core-asm</artifactId>
+            <version>3.2.18</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/spring-core-asm-3.2.18.RELEASE.jar</systemPath>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
