--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/spring-core-asm-3.2.18.RELEASE.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core-cglib</artifactId>
+            <version>3.2.18</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/spring-core-cglib-3.2.18.RELEASE.jar</systemPath>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
@@ -47,6 +54,12 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.13</version>
         </dependency>
     </dependencies>
 
